# transinout

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml
midi-filter/: Cargo.toml
midi-filter/src/: lib.rs
program-change/: Cargo.toml
program-change/src/: lib.rs
seemless-switch/: Cargo.toml
seemless-switch/src/: editor.rs  lib.rs  params.rs  processor.rs  state.rs
single-note/: Cargo.toml
single-note/src/: lib.rs
src/: lib.rs  shared.rs
