[package]
name = "transinout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
directories = "5"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
notify = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[workspace]
members = ["program-change", "midi-filter", "xtask"]
